--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-    <img src="/components/header.png" alt="Banner" style="max-width: 100%;"> <!-- Banner criado no Figma -->
+    <img src="components/header.png" alt="Banner" style="max-width: 100%;"> <!-- Banner criado no Figma -->
     
     <ul class="menu-horizontal"> <!-- Menu contendo quatro links, conforme solicitado. Os links direcionam para locais diferentes da mesma página. -->
         <li><a href="#NossoCasamento">Nosso Casamento</a></li>
