Update lista de presentes.html

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                     Taças <br> <br>
 
                     <b>ELETRODOMÉSTICOS (110V)</b> <br>
+                    <s>Airfryer</s> <br>
                     Aspirador de pó 2 em 1 <br>
                     Máquina de waffle <br> <br>
                 </div> 
@@ -139,11 +140,12 @@
                     Cabides <br> <br>
 
                     <b>BANHEIRO</b> <br>
-                    Jogo de Tapetes <br>
+                    <s>Jogo de toalhas</s> <br>
+                    Jogo de tapetes <br>
                     Roupão de banho <br> <br>
 
                     <b>LAVANDERIA/LIMPEZA</b> <br>
-                    Ferro de passar <br>
+                    <s>Ferro de passar</s> <br>
                     Tábua de passar <br>
                     Varal retrátil <br>
                     Mop Giratório <br> <br>
