--- a/index.html
+++ b/index.html
@@ -182,11 +182,10 @@
             dúvidas, por favor, não hesite em entrar em contato conosco. Para facilitar, clique no botão abaixo e você será redirecionado 
             para o WhatsApp. <br> <br>
 
-            <p style="text-align: center;"> 
-                <a href="https://wa.me/5575988518906">
-                    <img src="components/contato-noivos.png" alt="WhatsApp" width="60%">
-                </a>
-            </p>
+		<h4>
+			Por favor, clique <a href="https://wa.me/5575988518906">AQUI</a> para entrar em contato com os noivos.
+		</h4>
+
         </p>
 
         <br>
