Update lista de presentes.html

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                     Cortador de frutas e legumes <br>
                     Processador/Triturador de alimentos <br>
                     Chaleira <br>
-                    Porta-temperos <br>
-                    Taças <br> <br>
+                    <s>Porta-temperos</s> <br>
+                    <s>Jogo de taças</s> <br> <br>
 
                     <b>ELETRODOMÉSTICOS (110V)</b> <br>
                     <s>Airfryer</s> <br>
