Update lista (delete Tupperwar).html

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     Panos de prato <br>
                     Aparelho de jantar <br>
                     Utensílios de silicone <br>
-                    Tupperware <br>
+                    <s>Tupperware</s> <br>
                     Potes diversos <br>
                     Potes para mantimentos <br>
                     Jogo de panelas <br>
