--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     Aparelho de jantar <br>
                     Utensílios de silicone <br>
                     <s>Tupperware</s> <br>
-                    Potes diversos <br>
+                    Recipientes diversos <br>
                     Potes para mantimentos <br>
                     Jogo de panelas <br>
                     Assadeira <br>
@@ -129,7 +129,7 @@
 
                     <b>ELETRODOMÉSTICOS (110V)</b> <br>
                     <s>Airfryer</s> <br>
-                    Aspirador de pó 2 em 1 <br>
+                    <s>Aspirador de pó 2 em 1</s> <br>
                     Máquina de waffle <br> <br>
                 </div> 
 
