--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     Saladeira <br>
                     Petisqueira <br>
                     Cortador de frutas e legumes <br>
-                    Processador/Triturador de alimentos <br>
+                    <s>Processador/Triturador de alimentos</s> <br>
                     Chaleira <br>
                     <s>Porta-temperos</s> <br>
                     <s>Jogo de taças</s> <br> <br>
