--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     Utensílios de silicone <br>
                     <s>Tupperware</s> <br>
                     Recipientes diversos <br>
-                    Potes para mantimentos <br>
+                    <s>Potes para mantimentos</s> <br>
                     Jogo de panelas <br>
                     Assadeira <br>
                     Frigideira <br>
@@ -119,8 +119,8 @@
                     Amassador de alho <br>
                     Amassador de batata <br>
                     Tigela <br>
-                    Saladeira <br>
-                    Petisqueira <br>
+                    <s>Saladeira</s> <br>
+                    <s>Petisqueira</s> <br>
                     Cortador de frutas e legumes <br>
                     <s>Processador/Triturador de alimentos</s> <br>
                     Chaleira <br>
