--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
                     <s>Petisqueira</s> <br>
                     Cortador de frutas e legumes <br>
                     <s>Processador/Triturador de alimentos</s> <br>
-                    Chaleira <br>
+                    <s>Chaleira</s> <br>
+		    <s>Garrafa térmica</s> <br>
                     <s>Porta-temperos</s> <br>
                     <s>Jogo de taças</s> <br> <br>
 
