--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
             <div class="colunas">
                 <div class="coluna">
                     <b>COZINHA</b> <br>
-                    Mixer portátil <br>
+                    <s>Mixer portátil</s> <br>
                     Luva térmica <br>
                     Jogo de cozinha <br>
                     Panos de prato <br>
                     Aparelho de jantar <br>
-                    Utensílios de silicone <br>
+                    <s>Utensílios de silicone</s> <br>
                     <s>Tupperware</s> <br>
                     Recipientes diversos <br>
                     <s>Potes para mantimentos</s> <br>
