--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     Aparelho de jantar <br>
                     <s>Utensílios de silicone</s> <br>
                     <s>Tupperware</s> <br>
-                    Recipientes diversos <br>
+                    <s>Recipientes diversos</s> <br>
                     <s>Potes para mantimentos</s> <br>
                     Jogo de panelas <br>
                     Assadeira <br>
@@ -149,7 +149,7 @@
                     <s>Ferro de passar</s> <br>
                     Tábua de passar <br>
                     Varal retrátil <br>
-                    Mop Giratório <br> <br>
+                    <s>Mop Giratório</s> <br> <br>
 
                     <b>DECORAÇÃO</b> <br>
                     Porta-retratos <br>
