--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <s>Potes para mantimentos</s> <br>
                     Jogo de panelas <br>
                     Assadeira <br>
-                    Frigideira <br>
+                    <s>Frigideira</s> <br>
                     Balança de cozinha <br>
                     Tábua de corte <br>
                     Concha para feijão <br>
@@ -137,7 +137,7 @@
                 <div class="coluna">
                     <b>QUARTO</b> <br>
                     Jogo de cama (Casal) <br>
-                    Abajur <br>
+                    <s>Abajur</s> <br>
                     Cabides <br> <br>
 
                     <b>BANHEIRO</b> <br>
